# siros

./: .gitignore  Makefile  README.md  cs_regex.py  mkdocs.yml  pyproject.toml  requirements.txt  siros.sh  siros_dl.py  siros_mon.py  sm_data.py
siros/: siros_dl.py  siros_mon.py  sm_data.py
tests/: test_siros.py
